--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -81,9 +81,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "flatpickr": "^4.6.13",
-    "tippy.js": "^6.2.3",
-    "@tanstack/virtual-core@beta": "^3.0.0-beta.9"
-
+    "tippy.js": "^6.2.3"
   },
   "devDependencies": {
     "@stencil/angular-output-target": "^0.4.0",
