--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "printWidth": 80,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always"
 }
