ci: add ci steps to check format

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
     "test:core:watch": "nx run elements:test:watch",
-    "---lint---": "",
+    "---lint-n-format---": "",
     "lint": "nx run-many --target=lint --output-style=stream",
     "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream",
     "lint:core": "nx run elements:lint",
@@ -40,6 +40,8 @@
     "lint:angular": "nx run elements-angular:lint",
     "lint:react": "nx run elements-react:lint",
     "lint:vue": "nx run elements-vue:lint",
+    "format": "yarn prettier --check '**/*.{js,jsx,ts,tsx,md,html,css,scss}'",
+    "format:fix": "yarn prettier --write '**/*.{js,jsx,ts,tsx,md,html,css,scss}'",
     "---misc---": "",
     "clean": "nx run-many --target=clean && shx rm -rf dist",
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules",
@@ -47,7 +49,6 @@
     "changelog": "yarn changelog:root && yarn changelog:pkgs",
     "changelog:root": "standard-version",
     "changelog:pkgs": "lerna exec --concurrency 1 --stream 'standard-version'",
-    "format": "yarn prettier --write '**/*.{js,jsx,ts,tsx,md,html,css,scss}'",
     "new:component": "node scripts/newComponent.js",
     "prepare:release": "lerna version --conventional-commits --no-changelog --yes --no-git-tag-version",
     "publish:yalc": "node ./scripts/publishYalc.js",
