--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,14 @@ jobs:
         with:
           upload-core-artifacts: true
 
+  lint_n_format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/dependencies-install
+      - run: yarn lint
+      - run: yarn format
+
   test:
     needs:
       - build_core
@@ -28,7 +36,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/dependencies-install
-      - run: yarn lint
       - run: yarn build:core
       - run: yarn test
 
