--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -13,6 +13,7 @@ types:
   - chore
   - revert
 scopes:
+  - elements|ino-accordion
   - elements|ino-autocomplete
   - elements|ino-button
   - elements|ino-card
@@ -22,6 +23,7 @@ scopes:
   - elements|ino-chip
   - elements|ino-chip-set
   - elements|ino-control-item
+  - elements|ino-currency-input
   - elements|ino-datepicker
   - elements|ino-dialog
   - elements|ino-fab
@@ -36,6 +38,7 @@ scopes:
   - elements|ino-list
   - elements|ino-list-divider
   - elements|ino-list-item
+  - elements|ino-markdown-editor
   - elements|ino-menu
   - elements|ino-nav-drawer
   - elements|ino-nav-item
@@ -56,7 +59,8 @@ scopes:
   - elements|ino-tab
   - elements|ino-tab-bar
   - elements|ino-table
-  - elements|ino-table-header-cell
+  - elements|ino-table-cell
+  - elements|ino-table-row
   - elements|ino-textarea
   - elements|ino-tooltip
   - elements-angular|ino-autocomplete
@@ -68,6 +72,7 @@ scopes:
   - elements-angular|ino-chip
   - elements-angular|ino-chip-set
   - elements-angular|ino-control-item
+  - elements-angular|ino-currency-input
   - elements-angular|ino-datepicker
   - elements-angular|ino-dialog
   - elements-angular|ino-fab
@@ -82,6 +87,7 @@ scopes:
   - elements-angular|ino-list
   - elements-angular|ino-list-divider
   - elements-angular|ino-list-item
+  - elements-angular|ino-markdown-editor
   - elements-angular|ino-menu
   - elements-angular|ino-nav-drawer
   - elements-angular|ino-nav-item
@@ -102,7 +108,8 @@ scopes:
   - elements-angular|ino-tab
   - elements-angular|ino-tab-bar
   - elements-angular|ino-table
-  - elements-angular|ino-table-header-cell
+  - elements-angular|ino-table-cell
+  - elements-angular|ino-table-row
   - elements-angular|ino-textarea
   - elements-angular|ino-tooltip
   - elements-react|ino-autocomplete
@@ -114,6 +121,7 @@ scopes:
   - elements-react|ino-chip
   - elements-react|ino-chip-set
   - elements-react|ino-control-item
+  - elements-react|ino-currency-input
   - elements-react|ino-datepicker
   - elements-react|ino-dialog
   - elements-react|ino-fab
@@ -128,6 +136,7 @@ scopes:
   - elements-react|ino-list
   - elements-react|ino-list-divider
   - elements-react|ino-list-item
+  - elements-react|ino-markdown-editor
   - elements-react|ino-menu
   - elements-react|ino-nav-drawer
   - elements-react|ino-nav-item
@@ -148,9 +157,59 @@ scopes:
   - elements-react|ino-tab
   - elements-react|ino-tab-bar
   - elements-react|ino-table
-  - elements-react|ino-table-header-cell
+  - elements-react|ino-table-cell
+  - elements-react|ino-table-row
   - elements-react|ino-textarea
   - elements-react|ino-tooltip
+  - elements-vue|ino-autocomplete
+  - elements-vue|ino-button
+  - elements-vue|ino-card
+  - elements-vue|ino-carousel
+  - elements-vue|ino-carousel-slide
+  - elements-vue|ino-checkbox
+  - elements-vue|ino-chip
+  - elements-vue|ino-chip-set
+  - elements-vue|ino-control-item
+  - elements-vue|ino-currency-input
+  - elements-vue|ino-datepicker
+  - elements-vue|ino-dialog
+  - elements-vue|ino-fab
+  - elements-vue|ino-fab-set
+  - elements-vue|ino-icon
+  - elements-vue|ino-icon-button
+  - elements-vue|ino-img
+  - elements-vue|ino-img-list
+  - elements-vue|ino-input
+  - elements-vue|ino-input-file
+  - elements-vue|ino-label
+  - elements-vue|ino-list
+  - elements-vue|ino-list-divider
+  - elements-vue|ino-list-item
+  - elements-vue|ino-markdown-editor
+  - elements-vue|ino-menu
+  - elements-vue|ino-nav-drawer
+  - elements-vue|ino-nav-item
+  - elements-vue|ino-option
+  - elements-vue|ino-option-group
+  - elements-vue|ino-popover
+  - elements-vue|ino-progress-bar
+  - elements-vue|ino-radio
+  - elements-vue|ino-radio-group
+  - elements-vue|ino-range
+  - elements-vue|ino-segment-button
+  - elements-vue|ino-segment-group
+  - elements-vue|ino-select
+  - elements-vue|ino-selection
+  - elements-vue|ino-snackbar
+  - elements-vue|ino-spinner
+  - elements-vue|ino-switch
+  - elements-vue|ino-tab
+  - elements-vue|ino-tab-bar
+  - elements-vue|ino-table
+  - elements-vue|ino-table-cell
+  - elements-vue|ino-table-row
+  - elements-vue|ino-textarea
+  - elements-vue|ino-tooltip
   - storybook|ino-autocomplete
   - storybook|ino-button
   - storybook|ino-card
@@ -160,6 +219,7 @@ scopes:
   - storybook|ino-chip
   - storybook|ino-chip-set
   - storybook|ino-control-item
+  - storybook|ino-currency-input
   - storybook|ino-datepicker
   - storybook|ino-dialog
   - storybook|ino-fab
@@ -174,6 +234,7 @@ scopes:
   - storybook|ino-list
   - storybook|ino-list-divider
   - storybook|ino-list-item
+  - storybook|ino-markdown-editor
   - storybook|ino-menu
   - storybook|ino-nav-drawer
   - storybook|ino-nav-item
@@ -194,12 +255,18 @@ scopes:
   - storybook|ino-tab
   - storybook|ino-tab-bar
   - storybook|ino-table
-  - storybook|ino-table-header-cell
+  - storybook|ino-table-cell
+  - storybook|ino-table-row
   - storybook|ino-textarea
   - storybook|ino-tooltip
   - elements
   - elements-angular
+  - elements-angular-example
   - elements-react
+  - elements-react-example
+  - elements-vue
+  - elements-vue-example
   - storybook
+  - landingpage
   - '*'
   - deps
