--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -69,7 +69,7 @@
     "@material/tab-scroller": "^13.0.0",
     "@material/textfield": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@stencil/core": "2.17.1",
+    "@stencil/core": "^4.3.0",
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "@tiptap/core": "^2.0.0-beta.220",
     "@tiptap/extension-link": "^2.0.0-beta.220",
@@ -84,11 +84,11 @@
     "tippy.js": "^6.2.3"
   },
   "devDependencies": {
-    "@stencil/angular-output-target": "^0.4.0",
+    "@stencil/angular-output-target": "^0.8.2",
     "@stencil-community/eslint-plugin": "^0.5.0",
-    "@stencil/react-output-target": "^0.3.1",
-    "@stencil/sass": "2.0.3",
-    "@stencil/vue-output-target": "^0.6.0",
+    "@stencil/react-output-target": "^0.5.3",
+    "@stencil/sass": "^3.0.5",
+    "@stencil/vue-output-target": "^0.8.6",
     "@types/classnames": "^2.2.6",
     "@types/css-font-loading-module": "^0.0.6",
     "@types/jest": "26.0.14",
