--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nrwl/angular": "^15.5.2",
-    "@nrwl/eslint-plugin-nx": "^15.5.2",
+    "@nrwl/angular": "15.9.7",
+    "@nrwl/eslint-plugin-nx": "15.9.7",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/storybook": "15.5.2",
+    "@nrwl/storybook": "15.9.7",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
@@ -86,7 +86,7 @@
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "15.5.2",
+    "nx": "15.9.7",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -134,3 +134,4 @@
   "name": "core",
   "version": "8.1.3"
 }
+
