--- a/packages/landingpage/tsconfig.json
+++ b/packages/landingpage/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "react": [ "./node_modules/@types/react" ],
       "@elements": ["utils/elementsWrapper.ts"],
       "@assets/*": ["public/*"],
       "@styles/*": ["styles/*"]
