chore: update angular output target process

--- a/packages/elements-angular-example/tsconfig.json
+++ b/packages/elements-angular-example/tsconfig.json
@@ -5,7 +5,7 @@
     "useDefineForClassFields": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitOverride": true,
+    "noImplicitOverride": false,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
