--- a/packages/elements-angular/tsconfig.json
+++ b/packages/elements-angular/tsconfig.json
@@ -4,14 +4,15 @@
     "useDefineForClassFields": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitOverride": true,
+    "noImplicitOverride": false,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "files": [],
   "include": [],
+  "exclude": [ "src/generated/*.ts" ],
   "references": [
     {
       "path": "./tsconfig.lib.json"
