--- a/packages/elements-vue-example/project.json
+++ b/packages/elements-vue-example/project.json
@@ -8,7 +8,7 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "packages/elements-vue-example",
-        "command": "vue-cli-service build"
+        "command": "vite build"
       }
     },
     "start": {
@@ -19,10 +19,10 @@
       "defaultConfiguration": "dev",
       "configurations": {
         "dev": {
-          "command": "vue-cli-service serve --open --port=4400 --host=127.0.0.1"
+          "command": "vite serve"
         },
         "prod": {
-          "command": "vue-cli-service serve --open --port=4400 --host=127.0.0.1 --mode=production"
+          "command": "vite serve --mode=production"
         }
       }
     },
