chore: upgrade stencil & migrate from vue-cli to vite (#1070)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start:angular": "nx run-many --target=start --projects=,elements,elements-angular --output-style=stream",
     "start:angular-example": "nx run elements-angular-example:start",
     "start:react-example": "nx run-many --target=start --projects=elements-react*,elements --output-style=stream",
-    "start:react-example:only": "nx run react-example:start",
+    "start:react-example:only": "nx run elements-react-example:start",
     "start:vue-example": "nx run-many --target=start --projects=elements-vue*,elements --output-style=stream",
-    "start:vue-example:only": "nx run vue-example:start",
+    "start:vue-example:only": "nx run elements-vue-example:start",
     "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
     "start:landingpage:only": "nx run landingpage:start",
     "---build---": "",
@@ -64,9 +64,10 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nrwl/angular": "^15.5.2",
-    "@nrwl/eslint-plugin-nx": "^15.5.2",
-    "@nrwl/storybook": "15.5.2",
+    "@nrwl/angular": "15.9.7",
+    "@nrwl/eslint-plugin-nx": "15.9.7",
+    "@nrwl/nx": "^7.8.7",
+    "@nrwl/storybook": "15.9.7",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
@@ -85,7 +86,7 @@
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "15.5.2",
+    "nx": "15.9.7",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -133,3 +134,4 @@
   "name": "core",
   "version": "8.1.3"
 }
+
