--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-patterns",
   "private": true,
-  "version": "0.0.0",
+  "version": "8.1.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,6 +29,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-static-copy": "^0.17.0"
   }
 }
