--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "next-images": "^1.8.4",
     "sass": "^1.55.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "ui-patterns": "file:../ui-patterns"
   }
 }
