--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -3,18 +3,29 @@
   "private": true,
   "version": "8.1.3",
   "type": "module",
+  "types": "dist/types/index.d.ts",
+  "main": "dist/patterns.umd.js",
+  "module": "dist/patterns.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/patterns.es.js",
+      "require": "./dist/patterns.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
-    "build:vite": "tsc && vite build",
-    "build:patterns": "node scripts/build-patterns.cjs",
-    "build": "yarn build:vite && yarn build:patterns",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@inovex.de/elements-react": "^8.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-dts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
