--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "18.8.3",
-    "@types/react": "18.0.21",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
