--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@code-hike/mdx": "^0.7.4",
     "@inovex.de/elements-react": "^8.1.3",
+    "@inovex.de/ui-patterns": "8.1.3",
     "@mdx-js/loader": "^2.1.4",
     "@mdx-js/react": "^2.1.4",
     "@next/mdx": "^12.3.1",
@@ -33,7 +34,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "next-images": "^1.8.4",
     "sass": "^1.55.0",
-    "typescript": "4.8.4",
-    "ui-patterns": "file:../ui-patterns"
+    "typescript": "4.8.4"
   }
 }
