--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -4,12 +4,12 @@
   "version": "8.1.3",
   "type": "module",
   "types": "dist/types/index.d.ts",
-  "main": "dist/patterns.umd.js",
-  "module": "dist/patterns.es.js",
+  "main": "dist/ui-patterns.umd.cjs",
+  "module": "dist/ui-patterns.js",
   "exports": {
     ".": {
-      "import": "./dist/patterns.es.js",
-      "require": "./dist/patterns.umd.js"
+      "import": "./dist/ui-patterns.js",
+      "require": "./dist/ui-patterns.umd.cjs"
     }
   },
   "files": [
