--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -10,14 +10,15 @@
     ".": {
       "import": "./dist/ui-patterns.js",
       "require": "./dist/ui-patterns.umd.cjs"
-    }
+    },
+    "./dist/styles.css": "./dist/styles.css"
   },
   "files": [
     "dist"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && tailwindcss -o dist/styles.css --minify",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
