--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:vue-example:only": "nx run elements-vue-example:start",
     "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
     "start:landingpage:only": "nx run landingpage:start",
+    "start:ui-patterns": "nx run ui-patterns:dev",
     "---build---": "",
     "build": "nx run-many --target=build --output-style=stream",
     "build:core": "nx run elements:build",
@@ -28,6 +29,7 @@
     "build:react-example": "nx run elements-react-example:build",
     "build:vue-example": "nx run elements-vue-example:build",
     "build:landingpage": "nx run landingpage:build",
+    "build:ui-patterns": "nx run ui-patterns:build",
     "---test---": "",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
@@ -40,6 +42,7 @@
     "lint:angular": "nx run elements-angular:lint",
     "lint:react": "nx run elements-react:lint",
     "lint:vue": "nx run elements-vue:lint",
+    "lint:ui-patterns": "nx run ui-patterns:lint",
     "---misc---": "",
     "clean": "nx run-many --target=clean && shx rm -rf dist",
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules",
