--- a/packages/ui-patterns/project.json
+++ b/packages/ui-patterns/project.json
@@ -15,7 +15,7 @@
           ]
         }
       },
-      "start": {
+      "dev": {
         "executor": "nx:run-commands",
         "options": {
           "cwd": "packages/ui-patterns"
