--- a/package.json
+++ b/package.json
@@ -79,9 +79,11 @@
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
