--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -11,15 +11,13 @@
       "import": "./dist/ui-patterns.js",
       "require": "./dist/ui-patterns.umd.cjs"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./dist/style.css": "./dist/style.css",
+    "./dist/patterns-html": "./dist/patterns-html"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@inovex.de/elements-react": "^8.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "vite-plugin-dts": "^3.6.0"
   },
   "devDependencies": {
@@ -34,5 +32,10 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-static-copy": "^0.17.0"
+  },
+  "peerDependencies": {
+    "@inovex.de/elements-react": "^8.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
