--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -17,9 +17,6 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "vite-plugin-dts": "^3.6.0"
-  },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -31,6 +28,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.0",
     "vite-plugin-static-copy": "^0.17.0"
   },
   "peerDependencies": {
