--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -22,7 +22,8 @@
     "react-use": "^17.4.0",
     "rehype-highlight": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "shiki": "^0.14.5"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
