chore(elements-angular): adjust release process (#1033)
Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/packages/elements-angular-example/tsconfig.json
+++ b/packages/elements-angular-example/tsconfig.json
@@ -9,7 +9,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "files": [],
   "include": [],
