--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -23,7 +23,8 @@
     "Sebastian Löfflath <sebastian.loefflath@inovex.de>",
     "Simon Rey <srey@inovex.de>",
     "Sven Lindauer <slindauer@inovex.de>",
-    "Viet Duc Mai <viet.mai@inovex.de>"
+    "Viet Duc Mai <viet.mai@inovex.de>",
+    "Benedikt Scheffbuch <benedikt.scheffbuch@inovex.de>"
   ],
   "homepage": "https://elements.inovex.de",
   "bugs": {
