--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "18.0.6",
     "eslint-config-next": "12.3.1",
+    "next-html": "^0.1.1",
     "next-images": "^1.8.4",
     "sass": "^1.55.0",
     "typescript": "4.8.4"
