--- a/packages/elements-vue-example/project.json
+++ b/packages/elements-vue-example/project.json
@@ -1,5 +1,6 @@
 {
   "name": "elements-vue-example",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "packages/elements-vue-example/src",
   "tags": [],
