--- a/packages/elements-angular/.eslintrc.json
+++ b/packages/elements-angular/.eslintrc.json
@@ -1,14 +1,11 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": [
-    "!**/*",
-    "src/generated/**"
-  ],
+  "ignorePatterns": ["!**/*", "src/generated/**"],
   "overrides": [
     {
       "files": ["*.ts"],
       "extends": [
-        "plugin:@nrwl/nx/angular",
+        "plugin:@nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
@@ -25,7 +22,7 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:@nrwl/nx/angular-template"],
+      "extends": ["plugin:@nx/angular-template"],
       "rules": {}
     }
   ]
