--- a/packages/landingpage/project.json
+++ b/packages/landingpage/project.json
@@ -1,5 +1,6 @@
 {
   "name": "landingpage",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "/pages",
   "projectType": "application",
   "tags": [],
