--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -1,5 +1,6 @@
 {
   "name": "storybook",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/storybook/src",
   "projectType": "application",
   "tags": [],
