--- a/packages/elements-angular-example/project.json
+++ b/packages/elements-angular-example/project.json
@@ -68,7 +68,7 @@
       "defaultConfiguration": "development"
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
