--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:vue-example:only": "nx run elements-vue-example:start",
     "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
     "start:landingpage:only": "nx run landingpage:start",
+    "start:ui-patterns": "nx run ui-patterns:dev",
     "---build---": "",
     "build": "nx run-many --target=build --output-style=stream",
     "build:core": "nx run elements:build",
@@ -28,6 +29,7 @@
     "build:react-example": "nx run elements-react-example:build",
     "build:vue-example": "nx run elements-vue-example:build",
     "build:landingpage": "nx run landingpage:build",
+    "build:ui-patterns": "nx run ui-patterns:build",
     "---test---": "",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
@@ -40,6 +42,7 @@
     "lint:angular": "nx run elements-angular:lint",
     "lint:react": "nx run elements-react:lint",
     "lint:vue": "nx run elements-vue:lint",
+    "lint:ui-patterns": "nx run ui-patterns:lint",
     "---misc---": "",
     "clean": "nx run-many --target=clean && shx rm -rf dist",
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules",
@@ -76,9 +79,11 @@
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
