--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -1,12 +1,13 @@
 {
   "name": "elements",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/elements/src",
   "projectType": "library",
   "tags": [],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
-      "outputs": ["packages/elements/dist"],
+      "outputs": ["{projectRoot}/dist"],
       "options": {
         "cwd": "packages/elements",
         "command": "stencil build --ci"
@@ -35,7 +36,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
