--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "lint:react": "nx run elements-react:lint",
     "lint:vue": "nx run elements-vue:lint",
     "lint:ui-patterns": "nx run ui-patterns:lint",
-    "format": "yarn prettier --check **/*.{js,jsx,ts,tsx,md,html,css,scss}",
-    "format:fix": "yarn prettier --write ./**/*.{js,jsx,ts,tsx,md,html,css,scss}",
+    "format": "yarn prettier --check **/*.{js,ts,tsx,md,html,css,scss}",
+    "format:fix": "yarn prettier --write ./**/*.{js,ts,tsx,md,html,css,scss}",
     "---misc---": "",
     "clean": "nx run-many --target=clean && shx rm -rf dist",
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules",
