feat: add semver to tag and build changelog

--- a/nx.json
+++ b/nx.json
@@ -1,4 +1,7 @@
 {
+  "affected": {
+    "defaultBase": "master"
+  },
   "workspaceLayout": {
     "appsDir": "packages",
     "libsDir": "packages"
