--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "core",
   "private": true,
   "description": "This is a Monorepo root package which is used to execute build scripts.",
   "engines": {
@@ -6,45 +7,26 @@
   },
   "scripts": {
     "---start---": "",
-    "start:core": "nx run elements:start",
     "start:storybook": "nx run-many --target=start --projects=storybook,elements --output-style=stream",
-    "start:angular": "nx run-many --target=start --projects=,elements,elements-angular --output-style=stream",
     "start:angular-example": "nx run elements-angular-example:start",
-    "start:react-example": "nx run-many --target=start --projects=elements-react*,elements --output-style=stream",
-    "start:react-example:only": "nx run elements-react-example:start",
-    "start:vue-example": "nx run-many --target=start --projects=elements-vue*,elements --output-style=stream",
-    "start:vue-example:only": "nx run elements-vue-example:start",
-    "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
-    "start:landingpage:only": "nx run landingpage:start",
+    "start:react-example": "nx run elements-react-example:start",
+    "start:vue-example": "nx run elements-vue-example:start",
+    "start:landingpage": "nx run landingpage:start",
     "start:ui-patterns": "nx run ui-patterns:dev",
     "---build---": "",
-    "build": "nx run-many --target=build --output-style=stream",
+    "build": "nx run-many --target=build --output-style=stream --exclude workspace",
+    "build:affected": "nx run-many --target=build --output-style=stream --exclude workspace",
     "build:core": "nx run elements:build",
-    "build:core:dev": "nx run elements:build:dev",
-    "build:storybook": "nx run storybook:build",
-    "build:angular": "nx run elements-angular:build",
-    "build:react": "nx run elements-react:build",
-    "build:vue": "nx run elements-vue:build",
-    "build:angular-example": "nx run elements-angular-example:build",
-    "build:react-example": "nx run elements-react-example:build",
-    "build:vue-example": "nx run elements-vue-example:build",
     "build:landingpage": "nx run landingpage:build",
-    "build:ui-patterns": "nx run ui-patterns:build",
     "---test---": "",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
     "test:core:watch": "nx run elements:test:watch",
     "---lint-n-format---": "",
-    "lint": "nx run-many --target=lint --output-style=stream",
-    "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream",
-    "lint:core": "nx run elements:lint",
-    "lint:storybook": "nx run storybook:lint",
-    "lint:angular": "nx run elements-angular:lint",
-    "lint:react": "nx run elements-react:lint",
-    "lint:vue": "nx run elements-vue:lint",
-    "lint:ui-patterns": "nx run ui-patterns:lint",
-    "format": "yarn prettier --check **/*.{js,ts,tsx,md,html,css,scss}",
-    "format:fix": "yarn prettier --write ./**/*.{js,ts,tsx,md,html,css,scss}",
+    "lint": "nx run-many --target=lint --output-style=stream --exclude workspace",
+    "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream --exclude workspace",
+    "format": "nx run-many --target format:check --exclude workspace",
+    "format:fix": "nx run-many --target format:write --exclude workspace",
     "---misc---": "",
     "clean": "nx run-many --target=clean && shx rm -rf dist",
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules",
@@ -68,6 +50,7 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
+    "@jscutlery/semver": "^4.1.0",
     "@nx/angular": "17.1.2",
     "@nx/eslint": "^17.1.2",
     "@nx/eslint-plugin": "17.1.2",
@@ -137,6 +120,5 @@
       "**/@mdx-js/*"
     ]
   },
-  "name": "core",
   "version": "8.1.3"
 }
