feat: add semver to tag and build changelog

--- a/project.json
+++ b/project.json
@@ -8,42 +8,7 @@
         "syncVersions": true,
         "dryRun": true,
         "skipProjectChangelog": true,
-        "preset": {
-          "types": [
-            {
-              "type": "feat",
-              "section": "Features"
-            },
-            {
-              "type": "fix",
-              "section": "Bug Fixes"
-            },
-            {
-              "type": "style",
-              "section": "Styles"
-            },
-            {
-              "type": "chore",
-              "hidden": true
-            },
-            {
-              "type": "docs",
-              "hidden": true
-            },
-            {
-              "type": "refactor",
-              "hidden": true
-            },
-            {
-              "type": "perf",
-              "hidden": true
-            },
-            {
-              "type": "test",
-              "hidden": true
-            }
-          ]
-        }
+        "postTargets": ["elements:d"]
       }
     }
   },
