feat: add deploy target to all publishable libraries

--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,9 @@
     },
     "lint": {
       "cache": true
+    },
+    "deploy": {
+      "command": "npm publish --dry-run"
     }
   },
   "generators": {
