--- a/packages/elements-angular/project.json
+++ b/packages/elements-angular/project.json
@@ -68,6 +68,12 @@
           "packages/elements-angular/src/**/*.html"
         ]
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/{projectRoot}"
+      }
     }
   },
   "tags": []
