--- a/packages/elements-react/project.json
+++ b/packages/elements-react/project.json
@@ -34,6 +34,12 @@
           "command": "shx rm -rf packages/elements-react/node_modules"
         }
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/{projectRoot}"
+      }
     }
   }
 }
