--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -56,6 +56,12 @@
           "command": "svgo -f packages/elements/src/assets/ino-icon --config svgo.config.js"
         }
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}/{projectRoot}"
+      }
     }
   }
 }
