feat: add prerelease

--- a/project.json
+++ b/project.json
@@ -7,11 +7,24 @@
       "options": {
         "syncVersions": true,
         "skipProjectChangelog": true,
-        "dryRun": true,
+        "dryRun": false,
+        "push": false,
+        "commitMessageFormat": "chore: publish {version}",
         "postTargets": [
           "deploy-npm",
           "deploy-github"
         ]
+      },
+      "configurations": {
+        "prerelease": {
+          "releaseAs": "prerelease",
+          "skipCommit": true,
+          "skipRootChangelog": true,
+          "postTargets": [
+            "deploy-npm",
+            "cleanup-prerelease"
+          ]
+        }
       }
     },
     "deploy-npm": {
@@ -31,6 +44,14 @@
       "options": {
         "tag": "{tag}",
         "notes": "{notes}"
+      }
+    },
+    "cleanup-prerelease": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "git reset --hard"
+        ]
       }
     }
   },
