feat: Split ui-patterns into lib and playground package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:vue-example:only": "nx run elements-vue-example:start",
     "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
     "start:landingpage:only": "nx run landingpage:start",
-    "start:ui-patterns": "nx run ui-patterns:dev",
+    "start:ui-patterns-playground": "nx run ui-patterns-playground:start",
     "---build---": "",
     "build": "nx run-many --target=build --output-style=stream",
     "build:core": "nx run elements:build",
@@ -30,6 +30,7 @@
     "build:vue-example": "nx run elements-vue-example:build",
     "build:landingpage": "nx run landingpage:build",
     "build:ui-patterns": "nx run ui-patterns:build",
+    "build:ui-patterns-playground": "nx run ui-patterns-playground:build",
     "---test---": "",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
@@ -43,6 +44,7 @@
     "lint:react": "nx run elements-react:lint",
     "lint:vue": "nx run elements-vue:lint",
     "lint:ui-patterns": "nx run ui-patterns:lint",
+    "lint:ui-patterns-playground": "nx run ui-patterns-playground:lint",
     "format": "yarn prettier --check **/*.{js,ts,tsx,md,html,css,scss}",
     "format:fix": "yarn prettier --write ./**/*.{js,ts,tsx,md,html,css,scss}",
     "---misc---": "",
