--- a/packages/ui-patterns/project.json
+++ b/packages/ui-patterns/project.json
@@ -1,58 +1,40 @@
 {
-    "name": "ui-patterns",
-    "projectType": "application",
-    "sourceRoot": "packages/ui-patterns/src",
-    "tags": [],
-    "targets": {
-      "build": {
-        "executor": "nx:run-commands",
-        "outputs": ["{projectRoot}/dist"],
-        "options": {
-          "cwd": "packages/ui-patterns",
-          "commands": [
-            "tsc",
-            "vite build"
-          ]
-        }
+  "name": "ui-patterns",
+  "projectType": "library",
+  "sourceRoot": "packages/ui-patterns/src",
+  "tags": [],
+  "targets": {
+    "build": {
+      "executor": "nx:run-commands",
+      "outputs": ["{projectRoot}/dist"],
+      "options": {
+        "cwd": "packages/ui-patterns",
+        "commands": ["tsc", "vite build"]
+      }
+    },
+    "lint": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/ui-patterns",
+        "command": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
       },
-      "dev": {
-        "executor": "nx:run-commands",
-        "options": {
-          "cwd": "packages/ui-patterns"
-        },
-        "defaultConfiguration": "dev",
-        "configurations": {
-          "dev": {
-            "command": "vite --port 4400"
-          },
-          "prod": {
-            "command": "vite preview --port 4400"
-          }
+      "configurations": {
+        "fix": {
+          "command": "eslint . --ext ts,tsx --fix --report-unused-disable-directives --max-warnings 0"
         }
+      }
+    },
+    "clean": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/ui-patterns",
+        "command": "shx rm -rf dist"
       },
-      "lint": {
-        "executor": "nx:run-commands",
-        "options": {
-          "cwd": "packages/ui-patterns",
-          "command": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
-        },
-        "configurations": {
-          "fix": {
-            "command": "eslint . --ext ts,tsx --fix --report-unused-disable-directives --max-warnings 0"
-          }
-        }
-      },
-      "clean": {
-        "executor": "nx:run-commands",
-        "options": {
-          "cwd": "packages/ui-patterns",
-          "command": "shx rm -rf dist"
-        },
-        "configurations": {
-          "nodejs": {
-            "command": "shx rm -rf node_modules"
-          }
+      "configurations": {
+        "nodejs": {
+          "command": "shx rm -rf node_modules"
         }
       }
     }
   }
+}
