--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -9,7 +9,7 @@
   "exports": {
     ".": "./dist/ui-patterns.js",
     "./dist/style.css": "./dist/style.css",
-    "./dist/patterns-html": "./dist/patterns-html"
+    "./patterns-html/*": "./dist/patterns-html/*"
   },
   "files": [
     "dist"
