ci: minimize test pipeline

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "nx run-many --target=build --output-style=stream --exclude workspace",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci --exclude workspace",
     "test:core:watch": "nx run elements:test:watch",
-    "lint": "nx run-many --target=lint --output-style=stream --exclude workspace",
-    "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream --exclude workspace",
+    "lint": "nx affected --target=lint --output-style=stream --exclude workspace",
+    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream --exclude workspace",
     "format": "nx format:check --exclude workspace",
     "format:fix": "nx format:write --exclude workspace",
     "qc": "yarn lint && yarn format && yarn build && yarn test",
