--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,26 +8,27 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build_core:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/dependencies-install
-      - run: yarn nx run-many --target=build --projects=elements* --exclude=*-example
+      - run: yarn build
         # Build caches for (canary) release workflow
-      - if: github.ref == 'refs/heads/master'
-        name: Upload build artifacts for canary release
+      - name: Upload build artifacts for canary release
         uses: ./.github/workflows/artifacts-upload
         with:
           upload-core-artifacts: true
+          upload-example-artifacts: ${{ github.ref == 'refs/heads/master' }}
+          upload-storybook-artifact: true
 
   lint_n_format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/dependencies-install
-      - run: yarn lint
       - run: yarn format
+      - run: yarn lint
 
   test:
     needs:
@@ -39,24 +40,8 @@ jobs:
       - run: yarn build:core
       - run: yarn test
 
-  build_dependent:
-    runs-on: ubuntu-latest
-    needs:
-      - build_core
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/dependencies-install
-      - run: yarn nx run-many --target=build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload build artifacts
-        uses: ./.github/workflows/artifacts-upload
-        with:
-          upload-example-artifacts: ${{ github.ref == 'refs/heads/master' }}
-          upload-storybook-artifact: true
-
   unicorn:
     needs:
       - test
-      - build_dependent
+      - build
     uses: ./.github/workflows/deploy-unicorn.yml
