insert unit test script for nx

--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -32,6 +32,9 @@
         },
         "watch": {
           "command": "stencil test --e2e --watch"
+        },
+        "unit": {
+          "command": "stencil test --spec"
         }
       }
     },
