--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core": "nx run elements:test",
     "test:core:watch": "nx run elements:test:watch",
+    "test:unit": "nx run elements:test --configuration=unit",
     "---lint-n-format---": "",
     "lint": "nx run-many --target=lint --output-style=stream",
     "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream",
