--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
 
   test:
     needs:
-      - build_core
+      - build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
