--- a/package.json
+++ b/package.json
@@ -69,26 +69,39 @@
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@nx/angular": "17.1.2",
+    "@nx/devkit": "17.1.3",
     "@nx/eslint": "^17.1.2",
     "@nx/eslint-plugin": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/playwright": "^17.1.3",
     "@nx/storybook": "17.1.2",
+    "@nx/vite": "17.1.2",
+    "@nx/web": "17.1.2",
+    "@playwright/test": "^1.36.0",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@vitest/coverage-v8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.32.1",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "js-yaml": "^3.14.0",
+    "jsdom": "~22.1.0",
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
@@ -97,14 +110,17 @@
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.6.2",
     "prompts": "^2.4.0",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "standard-version": "^8.0.0",
     "svgo": "^2.8.0",
+    "swc-loader": "0.1.15",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4",
+    "vite": "~4.3.9",
+    "vitest": "~0.32.0",
     "yalc": "^1.0.0-pre.32"
   },
   "resolutions": {
