--- a/package.json
+++ b/package.json
@@ -64,30 +64,39 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-devkit/core": "~15.1.0",
+    "@angular-devkit/schematics": "~15.1.0",
     "@angular-eslint/eslint-plugin": "~15.0.0",
     "@angular-eslint/eslint-plugin-template": "~15.0.0",
     "@angular-eslint/template-parser": "~15.0.0",
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nx/angular": "17.1.2",
+    "@nx/angular": "^17.1.3",
     "@nx/devkit": "17.1.3",
     "@nx/eslint": "^17.1.2",
     "@nx/eslint-plugin": "17.1.2",
-    "@nx/js": "17.1.2",
+    "@nx/js": "17.1.3",
     "@nx/playwright": "^17.1.3",
+    "@nx/react": "^17.1.3",
     "@nx/storybook": "17.1.2",
     "@nx/vite": "17.1.2",
     "@nx/web": "17.1.2",
     "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~15.1.0",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
+    "@testing-library/react": "14.0.0",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
-    "@types/node": "18.7.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-v8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "camelcase": "^6.2.0",
@@ -95,15 +104,19 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "js-yaml": "^3.14.0",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
@@ -114,6 +127,7 @@
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
+    "sass": "^1.55.0",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "standard-version": "^8.0.0",
@@ -137,6 +151,10 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "@swc/helpers": "~0.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
