implement master screenshot testing and generating on native app

--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -35,6 +35,9 @@
         },
         "unit": {
           "command": "stencil test --spec"
+        },
+        "screenshot": {
+          "command": "stencil test --e2e --screenshot --no-build"
         }
       }
     },
