--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "test:core": "nx run elements:test",
     "test:core:watch": "nx run elements:test:watch",
     "test:unit": "nx run elements:test --configuration=unit",
+    "test:screenshot": "nx run elements:test --configuration=screenshot",
     "test:playwright": "nx run test-app-e2e:e2e",
+    "test:visualreact": "nx run elements-react-screenshot-e2e:e2e",
     "---lint-n-format---": "",
     "lint": "nx run-many --target=lint --output-style=stream",
     "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream",
@@ -114,6 +116,7 @@
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
+    "jimp": "^0.22.10",
     "js-yaml": "^3.14.0",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
@@ -121,6 +124,8 @@
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
     "nx": "17.1.2",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
