--- a/package.json
+++ b/package.json
@@ -70,10 +70,10 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nx/angular": "17.1.2",
-    "@nx/eslint": "^17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/storybook": "17.1.2",
+    "@nx/angular": "17.2.1",
+    "@nx/eslint": "17.2.1",
+    "@nx/eslint-plugin": "17.2.1",
+    "@nx/storybook": "17.2.1",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
@@ -85,8 +85,8 @@
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.32.1",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
@@ -94,7 +94,7 @@
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "17.1.2",
+    "nx": "17.2.1",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -122,6 +122,7 @@
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
     "rxjs": "~7.5.0",
+    "storybook": "^7.6.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -142,3 +143,4 @@
   "name": "core",
   "version": "8.1.3"
 }
+
