--- a/packages/elements-angular/package.json
+++ b/packages/elements-angular/package.json
@@ -39,18 +39,5 @@
   "esm2020": "./dist/esm2020/inovex.de-elements-angular.mjs",
   "fesm2020": "./dist/fesm2020/inovex.de-elements-angular.mjs",
   "fesm2015": "./dist/fesm2015/inovex.de-elements-angular.mjs",
-  "typings": "./dist/index.d.ts",
-  "exports": {
-    "./package.json": {
-      "default": "./package.json"
-    },
-    ".": {
-      "types": "./dist/index.d.ts",
-      "esm2020": "./dist/esm2020/inovex.de-elements-angular.mjs",
-      "es2020": "./dist/fesm2020/inovex.de-elements-angular.mjs",
-      "es2015": "./dist/fesm2015/inovex.de-elements-angular.mjs",
-      "node": "./dist/fesm2015/inovex.de-elements-angular.mjs",
-      "default": "./dist/fesm2020/inovex.de-elements-angular.mjs"
-    }
-  }
+  "typings": "./dist/index.d.ts"
 }
