--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -5,11 +5,14 @@
   "repository": "https://github.com/inovex/elements.git",
   "author": "Patrick Hillert <phillert@inovex.de>",
   "private": true,
+  "type": "module",
   "contributors": [
-    "Alexander Gerlach <agerlach@inovex.de",
+    "Alexander Gerlach <agerlach@inovex.de>",
+    "André Ehlert <andre.ehlert@inovex.de>",
     "Arne Maier <amaier@inovex.de>",
-    "Daniel Hieber <dhieber@inovex.de>",
+    "Benjamin Pagelsdorf <benjamin.pagelsdorf@inovex.de>",
     "Daniel Eckelt <deckelt@inovex.de>",
+    "Daniel Hieber <dhieber@inovex.de>",
     "Filipe Santos Correa <filipe.santoscorrea@inovex.de>",
     "Florian Köpke <fkoepke@inovex.de>",
     "Jacob Cofman <jcofman@inovex.de>",
@@ -17,12 +20,14 @@
     "Johann Böhler <jboehler@inovex.de>",
     "Johannes Reuter <johannes.reuter@inovex.de>",
     "Lukas Kirner <lkirner@inovex.de>",
+    "Maria-Luisa Stefan <maria-luisa.stefan@inovex.de>",
     "Mathias Gruschinske <mgruschinske@inovex.de>",
     "Michael Janssen <mjanssen@inovex.de>",
     "Pascal Fecht <pfecht@inovex.de>",
     "Sebastian Löfflath <sebastian.loefflath@inovex.de>",
     "Simon Rey <srey@inovex.de>",
     "Sven Lindauer <slindauer@inovex.de>",
+    "Tobias Heim Galindo <tobias.heim-galindo@inovex.de>",
     "Viet Duc Mai <viet.mai@inovex.de>"
   ],
   "homepage": "https://elements.inovex.de",
@@ -35,31 +40,33 @@
   ],
   "dependencies": {
     "@inovex.de/elements": "^8.1.3",
+    "lit": "^3.1.0",
     "moment": "^2.24.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.12",
+    "@babel/core": "^7.23.6",
     "@babel/plugin-proposal-optional-chaining": "^7.17.12",
     "@babel/plugin-transform-typescript": "^7.17.12",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.23.3",
     "@mdx-js/react": "^1.6.22",
     "@pxtrn/storybook-addon-docs-stencil": "^6.4.0",
-    "@storybook/addon-actions": "^6.5.8",
-    "@storybook/addon-essentials": "^6.5.8",
-    "@storybook/addon-links": "^6.5.8",
-    "@storybook/addon-viewport": "^6.5.8",
-    "@storybook/builder-webpack5": "^6.5.8",
-    "@storybook/manager-webpack5": "^6.5.8",
-    "@storybook/theming": "^6.5.8",
-    "@storybook/web-components": "^6.5.8",
-    "@types/node": "^14.17.0",
+    "@storybook/addon-actions": "^8.0.0-alpha.2",
+    "@storybook/addon-essentials": "^8.0.0-alpha.2",
+    "@storybook/addon-links": "^8.0.0-alpha.2",
+    "@storybook/addon-viewport": "^8.0.0-alpha.2",
+    "@storybook/theming": "^8.0.0-alpha.2",
+    "@storybook/web-components": "^8.0.0-alpha.2",
+    "@storybook/web-components-webpack5": "^8.0.0-alpha.2",
+    "@types/node": "^16.0.0",
     "babel-loader": "8.2.5",
     "chalk": "^2.4.2",
     "core-js": "^3.2.1",
     "css-loader": "^0.28.0",
-    "lit-html": "^1.3.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "prettier": "^1.16.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.6.0",
     "story-description-loader": "^1.0.0",
