--- a/.github/workflows/deploy-landingpage.yml
+++ b/.github/workflows/deploy-landingpage.yml
@@ -2,8 +2,6 @@ name: Deploy Landingpage
 
 on:
   push:
-    branches:
-      - master
     paths:
       - packages/landingpage/**
   workflow_dispatch:
@@ -11,11 +9,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/dependencies-install
       - name: Build landingpage ⚒️
-        run: yarn build:landingpage
+        run: yarn nx run landingpage:build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
