--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test & Build
+name: Quality Control
 
 on:
   push:
@@ -8,55 +8,33 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build_core:
+  qc:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/dependencies-install
-      - run: yarn nx run-many --target=build --projects=elements* --exclude=*-example
-        # Build caches for (canary) release workflow
-      - if: github.ref == 'refs/heads/master'
-        name: Upload build artifacts for canary release
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Track master branch to make nx affected work
+        run: |
+          git branch --track main origin/master
+      - name: Install dependencies
+        uses: ./.github/workflows/dependencies-install
+      - name: Check format
+        run: yarn format
+      - name: Check lint
+        run: yarn lint
+      - name: Build all projects
+        run: yarn build
+      - name: Test all projects
+        run: yarn test
+      - name: Upload build artifacts for canary release
         uses: ./.github/workflows/artifacts-upload
         with:
           upload-core-artifacts: true
-
-  lint_n_format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/dependencies-install
-      - run: yarn lint
-      - run: yarn format
-
-  test:
-    needs:
-      - build_core
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/dependencies-install
-      - run: yarn build:core
-      - run: yarn test
-
-  build_dependent:
-    runs-on: ubuntu-latest
-    needs:
-      - build_core
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/dependencies-install
-      - run: yarn nx run-many --target=build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload build artifacts
-        uses: ./.github/workflows/artifacts-upload
-        with:
           upload-example-artifacts: ${{ github.ref == 'refs/heads/master' }}
           upload-storybook-artifact: true
 
   unicorn:
-    needs:
-      - test
-      - build_dependent
+    needs: qc
     uses: ./.github/workflows/deploy-unicorn.yml
