chore: add new storybook build command

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -13,7 +13,7 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "packages/storybook",
-        "command": "build-storybook -c config -o dist",
+        "command": "storybook build -c config -o dist",
         "color": true
       }
     },
