--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@inovex.de/elements": "^9.0.0",
     "lit": "^3.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0"
   },
   "devDependencies": {
@@ -51,13 +52,13 @@
     "@babel/preset-typescript": "^7.23.3",
     "@mdx-js/react": "^1.6.22",
     "@pxtrn/storybook-addon-docs-stencil": "^6.4.0",
-    "@storybook/addon-actions": "^8.0.0-alpha.2",
-    "@storybook/addon-essentials": "^8.0.0-alpha.2",
-    "@storybook/addon-links": "^8.0.0-alpha.2",
-    "@storybook/addon-viewport": "^8.0.0-alpha.2",
-    "@storybook/theming": "^8.0.0-alpha.2",
-    "@storybook/web-components": "^8.0.0-alpha.2",
-    "@storybook/web-components-webpack5": "^8.0.0-alpha.2",
+    "@storybook/addon-actions": "^7.6.6",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-viewport": "^7.6.6",
+    "@storybook/theming": "^7.6.6",
+    "@storybook/web-components": "^7.6.6",
+    "@storybook/web-components-webpack5": "^7.6.6",
     "@types/node": "^16.0.0",
     "babel-loader": "8.2.5",
     "chalk": "^2.4.2",
